[gd_scene load_steps=13 format=3 uid="uid://dqldpk3kkveq1"]

[ext_resource type="Texture2D" uid="uid://cp5awbcxyjvxf" path="res://assets/sprites/slime_green.png" id="1_einr2"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_t7s8a"]
[ext_resource type="PackedScene" uid="uid://cib4iuqa7dinh" path="res://scenes/killzone.tscn" id="2_eh3b2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3e5j1"]
atlas = ExtResource("1_einr2")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp31r"]
atlas = ExtResource("1_einr2")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf5k6"]
atlas = ExtResource("1_einr2")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ssn"]
atlas = ExtResource("1_einr2")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnd7y"]
atlas = ExtResource("1_einr2")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6a7"]
atlas = ExtResource("1_einr2")
region = Rect2(48, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3s4dh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e5j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp31r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf5k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ssn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnd7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m6a7")
}],
"loop": true,
"name": &"take_damage",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig1mm"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r610h"]
size = Vector2(10, 14)

[node name="Slime" type="Node2D"]
script = ExtResource("1_t7s8a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3s4dh")
animation = &"take_damage"
autoplay = "idle"

[node name="Killzone" parent="." instance=ExtResource("2_eh3b2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ig1mm")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)

[node name="AttackZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_r610h")

[node name="Timer" type="Timer" parent="AttackZone"]
wait_time = 0.2

[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="timeout" from="AttackZone/Timer" to="." method="_on_timer_timeout"]
